[package]
name = "rog"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
atoi = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
