[package]
name = "rog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rog-server"
path = "src/bin/server.rs"

[[bin]]
name = "rog-cli"
path = "src/bin/cli.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
clokwerk = "0.4.0"
